--- a/components/form/index.css
+++ b/components/form/index.css
@@ -6,6 +6,7 @@
 .Form-field {
   display: block;
   font-size: 1rem;
+  position: relative;
 }
 
 .Form-field + .Form-field {
@@ -15,26 +16,36 @@
 .Form-label {
   display: block;
   margin-bottom: 0.8em;
-  font-size: 0.9em;
+  font-size: 0.9rem;
+  font-weight: var(--high-contrast-bold, normal);
 }
 
 .Form-control {
   display: block;
   width: 100%;
-  padding: 0.8em 0.9em 1em;
-  border: 2px solid rgb(var(--color-gray-light));
   font-size: 1rem;
+  min-width: 0;
+  padding: 0.6rem 0.7rem;
+  border: 3px solid;
+  border-color: rgb(var(--high-contrast-dark, var(--color-gray-light)));
+  background: rgb(var(--high-contrast-dark, 255, 255, 255));
+  color: rgb(var(--high-contrast-light, var(--default-color)));
+  -webkit-appearance: none;
+  border-radius: 0;
+  user-select: text;
 }
 
-.Form-control::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-  color: rgba(var(--color-gray-dark), 0.5);
-  font-size: 0.9em;
+textarea.Form-control {
+  height: 8.95rem;
+  resize: none;
 }
-.Form-control::-moz-placeholder { /* Firefox 19+ */
-  color: rgba(var(--color-gray-dark), 0.5);
-  font-size: 0.9em;
+
+.Form-control::placeholder {
+  color: rgb(var(--high-contrast-light, var(--color-text-muted)));
+  opacity: 1;
 }
-.Form-control:-ms-input-placeholder { /* IE 10+ */
-  color: rgba(var(--color-gray-dark), 0.5);
-  font-size: 0.9em;
+
+.Form-control:focus-visible {
+  outline: 0 !important;
+  border-color: rgb(var(--color-gray));
 }
